# Mydevify

./: .gitignore  README.md  env.example  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  server.rs
src/components/chat/: ChatArea.tsx  UsageIndicator.tsx
src/components/layout/: MainLayout.tsx
src/components/preview/: PreviewArea.tsx
src/components/settings/: AboutSettings.tsx  ApiKeySettings.tsx  BillingSettings.tsx  ConnectionsSettings.tsx  GeneralSettings.tsx  SettingsLayout.tsx  UsageSettings.tsx  VoiceSettings.tsx
src/components/sidebar/: FileTree.tsx  Sidebar.tsx
src/components/terminal/: TerminalPanel.tsx  terminalThemes.ts
src/components/topbar/: Topbar.tsx
src/config/: themes.ts
src/services/: aiService.ts  connectionTool.ts  fileService.ts  projectDetector.ts  snapshotService.ts  toolService.ts
src/services/connections/: cloudflare.ts  connectionManager.ts  github.ts  index.ts  namecheap.ts  netlify.ts  sendgrid.ts  stripe.ts  supabase.ts  types.ts  vercel.ts
src/stores/: chatStore.ts  connectionsStore.ts  projectStore.ts  settingsStore.ts  usageStore.ts
